--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,3 @@
-attr==0.3.2
-ConfigParser==7.1.0
-contextlib2==21.6.0
-cryptography==43.0.3
-Cython==3.0.11
-dl==0.1.0
-docutils==0.21.2
-filelock==3.16.1
-HTMLParser==0.0.2
-ipython==8.12.3
-ipywidgets==8.1.5
-Jinja2==3.1.4
-keyring==25.5.0
-mock==5.1.0
-numpy==2.1.3
-Pillow==11.0.0
-protobuf==5.28.3
-pyOpenSSL==24.2.1
-python-dotenv==1.0.1
-pywin32==305.1
-pywin32==307
-railroad==0.5.0
-redis==5.2.0
-Sphinx==8.1.3
-streamlit==1.39.0
-thread==2.0.5
-tornado==6.4.1
-trove_classifiers==2024.10.21.16
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+streamlit
+google-generativeai
+python-dotenv
